# matverseny-backend

./: .containerignore  .env.example  .env.template  .gitignore  .travis.yml  Cargo.toml  Containerfile  Dockerfile  LICENSE  Makefile  clippy.toml  compose.local.yaml  compose.yaml  deny.toml  docker-compose.yml  envoy.yaml  envoy.yml  go.mod  go.sum  justfile  main.go  mongo_setup.sh  otel-collector-config.yaml
.github/workflows/: cd.yaml  check.yml  ci.yml  integration-test.yml  test.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  state.rs
backend/src/error/: constants.rs  db.rs  mod.rs
backend/src/extractors/: json.rs  mod.rs  user_id.rs
backend/src/handlers/: mod.rs  register.rs  socket.rs  stats.rs
backend/src/handlers/competition/: mod.rs  solution.rs  time.rs
backend/src/handlers/problem/: create.rs  delete.rs  list.rs  mod.rs  order.rs  update.rs
backend/src/handlers/team/: code.rs  create.rs  disband.rs  get.rs  join.rs  kick.rs  leave.rs  mod.rs  update.rs
backend/src/middlewares/: claims.rs  mod.rs  permissions.rs
backend/src/utils/: join_code.rs  mod.rs  orm.rs  panic.rs  problems.rs  topics.rs
backend/tests/: competition.rs  problem.rs  register.rs  socket.rs  stats.rs  team.rs
backend/tests/utils/: response.rs
cmd/superadmin-keygen/: main.go
cmds/: Cargo.toml
cmds/src/: create_admin_user.rs  create_iam_app.rs  setup.rs
containerfiles/: migration.Containerfile  setup.Containerfile
dockerfiles/: migration.Dockerfile
entity/: Cargo.toml  aproblem.go  history.go  info.go  password.go  problem.go  solution.go  team.go  time.go  user.go
entity/src/: lib.rs  problems.rs  problems_order.rs  solutions_history.rs  team_members.rs  teams.rs  times.rs  users.rs
errs/: errs.go
events/: events.go  problems.go  solutions.go  time.go
handler/: admin.go  auth.go  competition.go  superadmin.go  team.go
internal/superadmin/: jwt.go
jwt/: refresh.go
kubernetes/: application.yaml  cluster-issuer.yaml  configmap-descheduler.yaml  configmap-ingress-nginx.yaml  deploy.sh  namespace-iam.yaml  namespace-matverseny-backend.yaml  namespace-matverseny.yaml  operators.sh
kubernetes/applications/: iam.yaml  matverseny-backend.yaml  nats.yaml
kubernetes/applications/iam/: iam.yaml  jwt.yaml  migration.yaml  mysql.yaml  secret.yaml  setup.yaml
kubernetes/applications/matverseny-backend/: matverseny-backend-migration.yaml  matverseny-backend.yaml  postgres-3.yaml  postgres-data-access.yaml  setup.yaml
kubernetes/iam/: iam.yaml  ingress.yaml  jwt.yaml  migration.yaml  mysql.yaml  secret.yaml
kubernetes/matverseny-backend/: ingress.yaml  kafka-1.yaml  kafka-3.yaml  kafka.yaml  matverseny-backend-migration.yaml  matverseny-backend.yaml  postgres-1.yaml  postgres-3.yaml  postgres-data-access.yaml  postgres.yaml  secret.yaml
log/: log.go
macros/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220906_033629_create_users_table.rs  m20220908_120622_create_teams_table.rs  m20220909_185939_create_users_table_foreign_key.rs  m20221125_000213_create_users_table.rs  m20221125_001445_create_teams_table.rs  m20221125_002951_create_team_members_table.rs  m20221208_194301_create_problems_table.rs  m20230107_191407_create_problems_order_table.rs  m20230304_232047_create_times_table.rs  m20230312_051936_create_solutions_history.rs  main.rs  utils.rs
proto/: Makefile  admin.pb.go  admin_grpc.pb.go  auth.pb.go  auth.proto  auth_grpc.pb.go  competition.pb.go  competition.proto  competition_grpc.pb.go  shared.pb.go  shared.proto  superadmin.pb.go  superadmin_grpc.pb.go  team.pb.go  team_grpc.pb.go
src/: error.rs  iam.rs  json.rs  lib.rs  main.rs  shared.rs  state.rs
src/error/: constants.rs  db.rs  mod.rs
src/extractors/: mod.rs  user_id.rs
src/handlers/: mod.rs  register.rs  socket.rs  stats.rs
src/handlers/competition/: mod.rs  solution.rs  time.rs
src/handlers/problem/: create.rs  delete.rs  list.rs  mod.rs  order.rs  update.rs
src/handlers/team/: code.rs  create.rs  disband.rs  get.rs  join.rs  kick.rs  leave.rs  mod.rs  update.rs
src/middlewares/: claims.rs  mod.rs  permissions.rs
src/utils/: de.rs  join_code.rs  mod.rs  orm.rs  problems.rs  signal.rs  topics.rs
test-utils/: Cargo.toml
test-utils/src/: iam.rs  lib.rs  macros.rs  prelude.rs  request.rs  response.rs  team.rs  user.rs
test/int/: auth_test.go  competition_test.go  helpers.go  helpers_test.go  int_suite_test.go  matchers_test.go  superadmin_test.go  team_test.go
tests/: competition.rs  problem.rs  register.rs  socket.rs  stats.rs  team.rs
tests/utils/: db.rs  iam.rs  macros.rs  mod.rs  prelude.rs  request.rs  setup.rs  team.rs  user.rs
