[workspace]
members = ["backend", "entity", "migration", "macros", "cmds", "test-utils"]
default-members = ["backend", "migration", "cmds"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
license-file = "LICENSE"

[workspace.dependencies]
const_format = "0.2.35"
entity = { path = "./entity" }
macros = { path = "./macros" }
sea-orm = { version = "1.1.19", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres", "with-uuid", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "parking_lot", "macros"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }
libiam = { git = "https://github.com/Verseghy/iam", package = "libiam" }
dotenvy = "0.15.7"
matverseny-backend = { path = "./backend" }
rand = "0.9.2"
test-utils = { path = "./test-utils" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio-tungstenite = "0.28.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3.31"

[workspace.lints.rust]
rust_2018_idioms = "warn"
future_incompatible = "warn"
nonstandard_style = "warn"
elided_lifetimes_in_paths = { level = "allow", priority = 1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
mem_forget = "warn"
unused_self = "warn"
filter_map_next = "warn"
needless_continue = "warn"
needless_borrow = "warn"
match_wildcard_for_single_variants = "warn"
if_let_mutex = "warn"
await_holding_lock = "warn"
imprecise_flops = "warn"
suboptimal_flops = "warn"
lossy_float_literal = "warn"
rest_pat_in_fully_bound_structs = "warn"
fn_params_excessive_bools = "warn"
exit = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
unnested_or_patterns = "warn"
str_to_string = "warn"
type_complexity = "allow"

[profile.release]
strip = true
lto = true
