[package]
name = "matverseny-backend"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
rust-version = "1.76"
default-run = "matverseny-backend"

[lints]
workspace = true

[dependencies]
axum = { version = "0.7.9", features = ["ws", "http2"] }
serde.workspace = true
tokio = { workspace = true, features = ["macros", "signal", "sync"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "compression-full", "decompression-full", "catch-panic", "sensitive-headers", "request-id", "util", "normalize-path"] }
tracing.workspace = true
tracing-subscriber.workspace = true
entity.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
validator = { version = "0.19.0", features = ["derive"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
futures.workspace = true
rand_chacha = "0.3.1"
serde_with = "3.11.0"
tokio-tungstenite.workspace = true
sqlx = { version = "0.8.2", default-features = false, features = ["postgres"] }
uuid.workspace = true
bytes = "1.8.0"
mime = "0.3.17"
macros.workspace = true
smallvec = "1.13.2"
const_format.workspace = true
pin-project-lite = "0.2.15"
reqwest.workspace = true
libiam.workspace = true
chrono = { version = "0.4.38", features = ["serde"] }
async-nats = "0.37.0"
headers = "0.4.0"
anyhow = "1.0.93"

[dev-dependencies]
test-utils.workspace = true
