[package]
name = "matverseny-backend"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
rust-version.workspace = true
default-run = "matverseny-backend"

[lints]
workspace = true

[dependencies]
axum = { version = "0.8.6", features = ["ws", "http2"] }
serde.workspace = true
tokio = { workspace = true, features = ["macros", "signal", "sync"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "compression-full", "decompression-full", "catch-panic", "sensitive-headers", "request-id", "util", "normalize-path"] }
tracing.workspace = true
tracing-subscriber.workspace = true
entity.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "10.2.0"
futures.workspace = true
rand.workspace = true
rand_chacha = "0.9.0"
serde_with = "3.15.1"
tokio-tungstenite.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = ["postgres"] }
uuid.workspace = true
bytes = "1.11.0"
mime = "0.3.17"
macros.workspace = true
smallvec = "1.15.1"
const_format.workspace = true
pin-project-lite = "0.2.16"
reqwest.workspace = true
libiam.workspace = true
chrono = { version = "0.4.42", features = ["serde"] }
async-nats = "0.45.0"
headers = "0.4.1"
anyhow = "1.0.100"

[dev-dependencies]
test-utils.workspace = true
