[package]
name = "cmds"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
libiam.workspace = true
dotenvy.workspace = true
kube = "0.96.0"
k8s-openapi = { version = "0.23.0", features = ["earliest"] }
rand = "0.8.5"

[[bin]]
name = "create_iam_app"
path = "src/create_iam_app.rs"

[[bin]]
name = "create_admin_user"
path = "src/create_admin_user.rs"

[[bin]]
name = "setup"
path = "src/setup.rs"
