[package]
name = "entity"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
sea-orm = { workspace = true, features = ["macros"] }
serde.workspace = true
serde_repr = "0.1.19"
uuid.workspace = true
