[package]
name = "migration"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
sea-orm-migration = { version = "0.12.4", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "cli"] }
entity = { path = "../entity" }
const_format = "0.2.32"
