[package]
name = "migration"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
tokio.workspace = true
sea-orm-migration = { version = "1.1.1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "cli"] }
entity.workspace = true
const_format.workspace = true
