[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[dependencies]
assert-json-diff = "2.0.2"
dotenvy.workspace = true
futures.workspace = true
http = "1.1.0"
libiam.workspace = true
matverseny-backend.workspace = true
migration = { version = "0.1.0", path = "../migration" }
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
serial_test = "2.0.0"
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
